# medallion-ads-pipeline

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint-pipeline.sh
ingestion/: bronze_writer.py  http_client.py  run_ingestion.py  settings.py
ingestion/extractors/: base.py  google_ads.py  meta_ads.py  tiktok_ads.py
observability/: health_check.py  metrics.py
orchestration/: definitions.py  jobs.py
orchestration/assets/: bronze.py  gold.py  postgres.py  silver.py  validation.py
orchestration/resources/: postgres.py
pipeline/bronze_to_silver/: base_transformer.py  google_ads.py  meta_ads.py  run_transformation.py  schema.py  silver_writer.py  tiktok_ads.py
pipeline/gold_to_postgres/: __init__.py  loader.py  run_loader.py  schema.py  settings.py
pipeline/silver_to_gold/: __init__.py  aggregations.py  gold_writer.py  run_gold.py
pipeline/validation/: __init__.py  run_validation.py  silver_suite.py  validator.py
sources/: main.py
sources/google_ads/: mock_data.py  router.py  schemas.py
sources/meta_ads/: mock_data.py  router.py  schemas.py
sources/shared/: date_utils.py  faker_utils.py
sources/tiktok_ads/: mock_data.py  router.py  schemas.py
tests/: conftest.py
tests/ingestion/: test_bronze_writer.py  test_http_client.py
tests/observability/: test_observability.py
tests/orchestration/: test_assets.py
tests/pipeline/: test_bronze_to_silver.py  test_gold_to_postgres.py  test_run_transformation.py  test_silver_to_gold.py  test_validation.py
(+5 files in other folders)
