[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-analytics-pipeline"
version = "0.1.0"
description = "Ad Analytics Data Platform — portfolio project"
requires-python = ">=3.12"

dependencies = [
    # APIs simuladas
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",

    # Transformações
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.0",

    # Banco de dados
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",

    # Qualidade de dados
    "great-expectations>=1.0",

    # Orquestração
    "dagster>=1.8",
    "dagster-webserver>=1.8",

    # Logging
    "loguru>=0.7",

    # Utilitários
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
include = ["sources*", "ingestion*", "pipeline*", "database*", "orchestration*", "observability*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",             # linter + formatter
    "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
